--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -109,7 +109,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.168.180.20;
+allow 1.170.224.129;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -214,7 +214,6 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
-allow 177.149.157.42;
 allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
@@ -230,6 +229,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
+allow 179.35.14.215;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -294,7 +294,6 @@ allow 185.191.204.254;
 allow 185.193.52.180;
 allow 185.195.236.55;
 allow 185.195.71.244;
-allow 185.198.234.221;
 allow 185.207.107.130;
 allow 185.207.107.216;
 allow 185.220.100.240;
@@ -505,6 +504,7 @@ allow 185.246.128.161;
 allow 185.246.188.149;
 allow 185.246.188.73;
 allow 185.246.188.74;
+allow 185.246.189.140;
 allow 185.246.189.99;
 allow 185.246.84.179;
 allow 185.247.184.105;
@@ -937,6 +937,7 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
+allow 217.154.21.121;
 allow 217.199.199.250;
 allow 23.137.248.100;
 allow 23.137.248.192;
@@ -1227,6 +1228,7 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2479:0:6e00::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1560,6 +1562,7 @@ allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
 allow 2a0e:bfc0:0:13::67bc;
 allow 2a0e:bfc0:0:14::24a8;
+allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc0:0:8::a84e;
 allow 2a0e:bfc2:0:24::3456;
 allow 2a0e:bfc7:0:3::2d83;
@@ -1591,54 +1594,6 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
-allow 2a10:1fc0:10::19eb:717b;
-allow 2a10:1fc0:10::28fc:90d4;
-allow 2a10:1fc0:10::2a17:5b54;
-allow 2a10:1fc0:10::2cf4:6ba2;
-allow 2a10:1fc0:10::2d91:1a2d;
-allow 2a10:1fc0:10::3903:457;
-allow 2a10:1fc0:10::3919:de17;
-allow 2a10:1fc0:10::3a1:5e9f;
-allow 2a10:1fc0:10::3dc5:e694;
-allow 2a10:1fc0:10::3eb3:d1d0;
-allow 2a10:1fc0:10::3ec1:2b1e;
-allow 2a10:1fc0:10::40d8:83c;
-allow 2a10:1fc0:10::42d2:f78b;
-allow 2a10:1fc0:10::5138:4dfa;
-allow 2a10:1fc0:10::5719:261d;
-allow 2a10:1fc0:10::61d9:7617;
-allow 2a10:1fc0:10::61e2:c84d;
-allow 2a10:1fc0:10::627f:3c31;
-allow 2a10:1fc0:10::694a:c359;
-allow 2a10:1fc0:10::6b4c:30fc;
-allow 2a10:1fc0:10::6c2e:469a;
-allow 2a10:1fc0:10::6d92:d6ab;
-allow 2a10:1fc0:10::6fde:4b8d;
-allow 2a10:1fc0:10::792f:38b4;
-allow 2a10:1fc0:10::895d:abf9;
-allow 2a10:1fc0:10::8a03:d023;
-allow 2a10:1fc0:10::8b78:d42e;
-allow 2a10:1fc0:10::8d4d:eca2;
-allow 2a10:1fc0:10::9a73:d4f2;
-allow 2a10:1fc0:10::9d80:c9f7;
-allow 2a10:1fc0:10::9e08:e765;
-allow 2a10:1fc0:10::a3a5:49da;
-allow 2a10:1fc0:10::a458:8b37;
-allow 2a10:1fc0:10::a63c:724c;
-allow 2a10:1fc0:10::b571:1205;
-allow 2a10:1fc0:10::bf3f:d195;
-allow 2a10:1fc0:10::c129:61a1;
-allow 2a10:1fc0:10::c385:c7fa;
-allow 2a10:1fc0:10::c7c7:2f84;
-allow 2a10:1fc0:10::d5a6:a292;
-allow 2a10:1fc0:10::d5d0:db30;
-allow 2a10:1fc0:10::d6b7:b3e9;
-allow 2a10:1fc0:10::dbe0:6173;
-allow 2a10:1fc0:10::dbe9:7852;
-allow 2a10:1fc0:10::e4c8:9020;
-allow 2a10:1fc0:10::ea87:5496;
-allow 2a10:1fc0:10::fa6c:cac5;
-allow 2a10:1fc0:10::fdb0:ba7f;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:1467::;
@@ -1705,7 +1660,6 @@ allow 2a12:a800:9:1:193:26:115:61;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1717,6 +1671,7 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1838,12 +1793,12 @@ allow 45.95.169.109;
 allow 45.95.169.130;
 allow 45.95.169.14;
 allow 45.95.169.230;
+allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
-allow 46.249.49.183;
 allow 46.30.188.218;
 allow 47.254.142.180;
 allow 47.89.193.230;
@@ -1941,30 +1896,6 @@ allow 84.211.226.13;
 allow 84.235.236.189;
 allow 84.239.46.144;
 allow 85.239.41.130;
-allow 85.239.55.11;
-allow 85.239.55.110;
-allow 85.239.55.112;
-allow 85.239.55.114;
-allow 85.239.55.123;
-allow 85.239.55.132;
-allow 85.239.55.168;
-allow 85.239.55.173;
-allow 85.239.55.174;
-allow 85.239.55.184;
-allow 85.239.55.189;
-allow 85.239.55.192;
-allow 85.239.55.201;
-allow 85.239.55.228;
-allow 85.239.55.230;
-allow 85.239.55.239;
-allow 85.239.55.24;
-allow 85.239.55.249;
-allow 85.239.55.25;
-allow 85.239.55.250;
-allow 85.239.55.31;
-allow 85.239.55.37;
-allow 85.239.55.51;
-allow 85.239.55.80;
 allow 85.93.218.204;
 allow 86.54.28.49;
 allow 87.118.110.27;
@@ -1988,6 +1919,7 @@ allow 89.222.102.137;
 allow 89.234.157.254;
 allow 89.32.41.150;
 allow 89.36.231.128;
+allow 89.37.95.34;
 allow 89.58.26.216;
 allow 89.58.41.156;
 allow 91.132.144.59;
@@ -2007,30 +1939,6 @@ allow 91.210.59.188;
 allow 91.219.236.101;
 allow 91.219.236.91;
 allow 91.227.114.153;
-allow 91.227.77.107;
-allow 91.227.77.108;
-allow 91.227.77.119;
-allow 91.227.77.125;
-allow 91.227.77.139;
-allow 91.227.77.158;
-allow 91.227.77.160;
-allow 91.227.77.181;
-allow 91.227.77.193;
-allow 91.227.77.200;
-allow 91.227.77.208;
-allow 91.227.77.209;
-allow 91.227.77.226;
-allow 91.227.77.229;
-allow 91.227.77.237;
-allow 91.227.77.25;
-allow 91.227.77.31;
-allow 91.227.77.36;
-allow 91.227.77.44;
-allow 91.227.77.48;
-allow 91.227.77.51;
-allow 91.227.77.54;
-allow 91.227.77.62;
-allow 91.227.77.97;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
@@ -2060,6 +1968,7 @@ allow 94.72.103.33;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
+allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
 allow 95.216.107.148;
