--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -350,6 +350,7 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
 set_real_ip_from 2a02:16d0:0:5::1;
+set_real_ip_from 2a02:2479:0:6e00::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -683,6 +684,7 @@ set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
 set_real_ip_from 2a0e:bfc0:0:13::67bc;
 set_real_ip_from 2a0e:bfc0:0:14::24a8;
+set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:bfc0:0:8::a84e;
 set_real_ip_from 2a0e:bfc2:0:24::3456;
 set_real_ip_from 2a0e:bfc7:0:3::2d83;
@@ -714,54 +716,6 @@ set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
-set_real_ip_from 2a10:1fc0:10::19eb:717b;
-set_real_ip_from 2a10:1fc0:10::28fc:90d4;
-set_real_ip_from 2a10:1fc0:10::2a17:5b54;
-set_real_ip_from 2a10:1fc0:10::2cf4:6ba2;
-set_real_ip_from 2a10:1fc0:10::2d91:1a2d;
-set_real_ip_from 2a10:1fc0:10::3903:457;
-set_real_ip_from 2a10:1fc0:10::3919:de17;
-set_real_ip_from 2a10:1fc0:10::3a1:5e9f;
-set_real_ip_from 2a10:1fc0:10::3dc5:e694;
-set_real_ip_from 2a10:1fc0:10::3eb3:d1d0;
-set_real_ip_from 2a10:1fc0:10::3ec1:2b1e;
-set_real_ip_from 2a10:1fc0:10::40d8:83c;
-set_real_ip_from 2a10:1fc0:10::42d2:f78b;
-set_real_ip_from 2a10:1fc0:10::5138:4dfa;
-set_real_ip_from 2a10:1fc0:10::5719:261d;
-set_real_ip_from 2a10:1fc0:10::61d9:7617;
-set_real_ip_from 2a10:1fc0:10::61e2:c84d;
-set_real_ip_from 2a10:1fc0:10::627f:3c31;
-set_real_ip_from 2a10:1fc0:10::694a:c359;
-set_real_ip_from 2a10:1fc0:10::6b4c:30fc;
-set_real_ip_from 2a10:1fc0:10::6c2e:469a;
-set_real_ip_from 2a10:1fc0:10::6d92:d6ab;
-set_real_ip_from 2a10:1fc0:10::6fde:4b8d;
-set_real_ip_from 2a10:1fc0:10::792f:38b4;
-set_real_ip_from 2a10:1fc0:10::895d:abf9;
-set_real_ip_from 2a10:1fc0:10::8a03:d023;
-set_real_ip_from 2a10:1fc0:10::8b78:d42e;
-set_real_ip_from 2a10:1fc0:10::8d4d:eca2;
-set_real_ip_from 2a10:1fc0:10::9a73:d4f2;
-set_real_ip_from 2a10:1fc0:10::9d80:c9f7;
-set_real_ip_from 2a10:1fc0:10::9e08:e765;
-set_real_ip_from 2a10:1fc0:10::a3a5:49da;
-set_real_ip_from 2a10:1fc0:10::a458:8b37;
-set_real_ip_from 2a10:1fc0:10::a63c:724c;
-set_real_ip_from 2a10:1fc0:10::b571:1205;
-set_real_ip_from 2a10:1fc0:10::bf3f:d195;
-set_real_ip_from 2a10:1fc0:10::c129:61a1;
-set_real_ip_from 2a10:1fc0:10::c385:c7fa;
-set_real_ip_from 2a10:1fc0:10::c7c7:2f84;
-set_real_ip_from 2a10:1fc0:10::d5a6:a292;
-set_real_ip_from 2a10:1fc0:10::d5d0:db30;
-set_real_ip_from 2a10:1fc0:10::d6b7:b3e9;
-set_real_ip_from 2a10:1fc0:10::dbe0:6173;
-set_real_ip_from 2a10:1fc0:10::dbe9:7852;
-set_real_ip_from 2a10:1fc0:10::e4c8:9020;
-set_real_ip_from 2a10:1fc0:10::ea87:5496;
-set_real_ip_from 2a10:1fc0:10::fa6c:cac5;
-set_real_ip_from 2a10:1fc0:10::fdb0:ba7f;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:1467::;
