--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,7 +1,6 @@
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
-allow 102.211.56.105;
 allow 102.211.56.12;
 allow 102.211.56.13;
 allow 102.211.56.250;
@@ -109,7 +108,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.170.235.67;
+allow 1.168.177.91;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -193,7 +192,6 @@ allow 172.232.209.254;
 allow 172.233.82.41;
 allow 172.234.228.174;
 allow 172.81.131.110;
-allow 172.81.131.111;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
@@ -204,7 +202,6 @@ allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.100.98;
-allow 176.58.121.177;
 allow 176.65.148.133;
 allow 176.65.148.3;
 allow 176.65.149.100;
@@ -938,6 +935,7 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
+allow 217.154.21.121;
 allow 217.199.199.250;
 allow 23.137.248.100;
 allow 23.137.248.192;
@@ -980,7 +978,6 @@ allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
-allow 23.236.122.193;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8905::f03c:95ff:fe67:ec03;
@@ -1225,9 +1222,9 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2479:0:6e00::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1864,6 +1861,7 @@ allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 78.159.131.96;
+allow 78.21.63.183;
 allow 79.100.235.29;
 allow 80.241.60.207;
 allow 80.67.167.81;
@@ -1902,7 +1900,6 @@ allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
 allow 89.110.112.209;
-allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
