--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -109,7 +109,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.168.184.96;
+allow 1.168.184.67;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -129,6 +129,7 @@ allow 135.125.239.70;
 allow 136.175.8.45;
 allow 136.244.111.163;
 allow 138.59.18.110;
+allow 138.68.144.236;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.164.38.67;
@@ -201,7 +202,6 @@ allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.58.100.98;
-allow 176.58.121.177;
 allow 176.65.148.133;
 allow 176.65.148.3;
 allow 176.65.149.100;
@@ -296,14 +296,6 @@ allow 185.220.100.240;
 allow 185.220.100.241;
 allow 185.220.100.242;
 allow 185.220.100.243;
-allow 185.220.100.244;
-allow 185.220.100.245;
-allow 185.220.100.246;
-allow 185.220.100.247;
-allow 185.220.100.248;
-allow 185.220.100.249;
-allow 185.220.100.250;
-allow 185.220.100.251;
 allow 185.220.100.252;
 allow 185.220.100.253;
 allow 185.220.100.254;
@@ -771,10 +763,13 @@ allow 2001:67c:e60:c0c:192:42:116:200;
 allow 2001:67c:e60:c0c:192:42:116:201;
 allow 2001:67c:e60:c0c:192:42:116:202;
 allow 2001:67c:e60:c0c:192:42:116:203;
+allow 2001:67c:e60:c0c:192:42:116:208;
 allow 2001:67c:e60:c0c:192:42:116:209;
 allow 2001:67c:e60:c0c:192:42:116:210;
+allow 2001:67c:e60:c0c:192:42:116:211;
 allow 2001:67c:e60:c0c:192:42:116:212;
 allow 2001:67c:e60:c0c:192:42:116:213;
+allow 2001:67c:e60:c0c:192:42:116:214;
 allow 2001:67c:e60:c0c:192:42:116:215;
 allow 2001:67c:e60:c0c:192:42:116:216;
 allow 2001:67c:e60:c0c:192:42:116:217;
@@ -1222,7 +1217,6 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a01:e5c0:6e3b::2;
 allow 2a02:16d0:0:5::1;
@@ -1325,10 +1319,7 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
-allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
-allow 2a0b:f4c0:16c:11::1;
-allow 2a0b:f4c0:16c:12::1;
 allow 2a0b:f4c0:16c:13::1;
 allow 2a0b:f4c0:16c:14::1;
 allow 2a0b:f4c0:16c:15::1;
@@ -1336,11 +1327,6 @@ allow 2a0b:f4c0:16c:16::1;
 allow 2a0b:f4c0:16c:2::1;
 allow 2a0b:f4c0:16c:3::1;
 allow 2a0b:f4c0:16c:4::1;
-allow 2a0b:f4c0:16c:5::1;
-allow 2a0b:f4c0:16c:6::1;
-allow 2a0b:f4c0:16c:7::1;
-allow 2a0b:f4c0:16c:8::1;
-allow 2a0b:f4c0:16c:9::1;
 allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
@@ -1896,6 +1882,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -1957,6 +1944,5 @@ allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.168.173.143;
 allow 95.211.174.137;
-allow 95.211.244.28;
 allow 95.216.107.148;
 allow 98.128.173.33;
