--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -90,10 +90,13 @@ allow 2001:67c:e60:c0c:192:42:116:200;
 allow 2001:67c:e60:c0c:192:42:116:201;
 allow 2001:67c:e60:c0c:192:42:116:202;
 allow 2001:67c:e60:c0c:192:42:116:203;
+allow 2001:67c:e60:c0c:192:42:116:208;
 allow 2001:67c:e60:c0c:192:42:116:209;
 allow 2001:67c:e60:c0c:192:42:116:210;
+allow 2001:67c:e60:c0c:192:42:116:211;
 allow 2001:67c:e60:c0c:192:42:116:212;
 allow 2001:67c:e60:c0c:192:42:116:213;
+allow 2001:67c:e60:c0c:192:42:116:214;
 allow 2001:67c:e60:c0c:192:42:116:215;
 allow 2001:67c:e60:c0c:192:42:116:216;
 allow 2001:67c:e60:c0c:192:42:116:217;
@@ -346,7 +349,6 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a01:e5c0:6e3b::2;
 allow 2a02:16d0:0:5::1;
@@ -449,10 +451,7 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
-allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
-allow 2a0b:f4c0:16c:11::1;
-allow 2a0b:f4c0:16c:12::1;
 allow 2a0b:f4c0:16c:13::1;
 allow 2a0b:f4c0:16c:14::1;
 allow 2a0b:f4c0:16c:15::1;
@@ -460,11 +459,6 @@ allow 2a0b:f4c0:16c:16::1;
 allow 2a0b:f4c0:16c:2::1;
 allow 2a0b:f4c0:16c:3::1;
 allow 2a0b:f4c0:16c:4::1;
-allow 2a0b:f4c0:16c:5::1;
-allow 2a0b:f4c0:16c:6::1;
-allow 2a0b:f4c0:16c:7::1;
-allow 2a0b:f4c0:16c:8::1;
-allow 2a0b:f4c0:16c:9::1;
 allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
