--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -109,7 +109,7 @@ deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.35.245.150;
-deny 1.168.184.96;
+deny 1.168.184.67;
 deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
@@ -129,6 +129,7 @@ deny 135.125.239.70;
 deny 136.175.8.45;
 deny 136.244.111.163;
 deny 138.59.18.110;
+deny 138.68.144.236;
 deny 139.99.172.11;
 deny 139.99.8.57;
 deny 141.164.38.67;
@@ -201,7 +202,6 @@ deny 173.237.206.68;
 deny 173.255.198.243;
 deny 176.118.193.33;
 deny 176.58.100.98;
-deny 176.58.121.177;
 deny 176.65.148.133;
 deny 176.65.148.3;
 deny 176.65.149.100;
@@ -296,14 +296,6 @@ deny 185.220.100.240;
 deny 185.220.100.241;
 deny 185.220.100.242;
 deny 185.220.100.243;
-deny 185.220.100.244;
-deny 185.220.100.245;
-deny 185.220.100.246;
-deny 185.220.100.247;
-deny 185.220.100.248;
-deny 185.220.100.249;
-deny 185.220.100.250;
-deny 185.220.100.251;
 deny 185.220.100.252;
 deny 185.220.100.253;
 deny 185.220.100.254;
@@ -771,10 +763,13 @@ deny 2001:67c:e60:c0c:192:42:116:200;
 deny 2001:67c:e60:c0c:192:42:116:201;
 deny 2001:67c:e60:c0c:192:42:116:202;
 deny 2001:67c:e60:c0c:192:42:116:203;
+deny 2001:67c:e60:c0c:192:42:116:208;
 deny 2001:67c:e60:c0c:192:42:116:209;
 deny 2001:67c:e60:c0c:192:42:116:210;
+deny 2001:67c:e60:c0c:192:42:116:211;
 deny 2001:67c:e60:c0c:192:42:116:212;
 deny 2001:67c:e60:c0c:192:42:116:213;
+deny 2001:67c:e60:c0c:192:42:116:214;
 deny 2001:67c:e60:c0c:192:42:116:215;
 deny 2001:67c:e60:c0c:192:42:116:216;
 deny 2001:67c:e60:c0c:192:42:116:217;
@@ -1222,7 +1217,6 @@ deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
-deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe52:c6f8;
 deny 2a01:e5c0:6e3b::2;
 deny 2a02:16d0:0:5::1;
@@ -1325,10 +1319,7 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
-deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
-deny 2a0b:f4c0:16c:11::1;
-deny 2a0b:f4c0:16c:12::1;
 deny 2a0b:f4c0:16c:13::1;
 deny 2a0b:f4c0:16c:14::1;
 deny 2a0b:f4c0:16c:15::1;
@@ -1336,11 +1327,6 @@ deny 2a0b:f4c0:16c:16::1;
 deny 2a0b:f4c0:16c:2::1;
 deny 2a0b:f4c0:16c:3::1;
 deny 2a0b:f4c0:16c:4::1;
-deny 2a0b:f4c0:16c:5::1;
-deny 2a0b:f4c0:16c:6::1;
-deny 2a0b:f4c0:16c:7::1;
-deny 2a0b:f4c0:16c:8::1;
-deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
@@ -1896,6 +1882,7 @@ deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
 deny 88.80.26.4;
+deny 89.110.95.200;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
@@ -1957,6 +1944,5 @@ deny 95.142.161.63;
 deny 95.143.193.125;
 deny 95.168.173.143;
 deny 95.211.174.137;
-deny 95.211.244.28;
 deny 95.216.107.148;
 deny 98.128.173.33;
